crates/math-core/tests/snapshots/error_test__hspace_unknown_unit.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\hspace{2ly}"
---
Error: Expected length with units, got "2ly".
   ╭─[ <input>:1:8 ]
   │
 1 │ \hspace{2ly}
   │        ──┬──  
   │          ╰──── expected length here
───╯
